--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.7",
+    "@headlessui/react": "^1.7.13",
     "@headlessui/tailwindcss": "^0.1.2",
-    "@heroicons/react": "^2.0.13",
+    "@heroicons/react": "^2.0.16",
+    "@radix-ui/react-scroll-area": "^1.0.2",
+    "@radix-ui/react-separator": "^1.0.1",
     "@tailwindcss/forms": "^0.5.3",
     "@vercel/analytics": "^0.1.8",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
     "eventsource-parser": "^0.0.5",
+    "lucide-react": "^0.122.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.0",
     "react-hot-toast": "^2.4.0",
-    "react-use-measure": "^2.1.1"
+    "react-use-measure": "^2.1.1",
+    "tailwind-merge": "^1.10.0",
+    "tailwindcss-animate": "^1.0.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
